# fastapi-podman

./: Dockerfile  README.md  pyproject.toml
