[tool.poetry]
name = "fastapi-podman"
version = "0.1.0"
description = ""
authors = ["Angelos Panagiotopoulos <angelospanag@protonmail.com>"]
readme = "README.md"
packages = [{ include = "fastapi_podman" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.86.0"
uvicorn = { extras = ["standard"], version = "^0.19.0" }


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pep8-naming = "^0.13.2"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
