[tool.poetry]
name = "fastapi-podman"
version = "0.1.0"
description = ""
authors = ["Angelos Panagiotopoulos <angelospanag@protonmail.com>"]
readme = "README.md"
packages = [{ include = "fastapi_podman" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = { extras = ["standard"], version = "^0.25.0" }


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
